--- a/ClientIT/Controls/TicketDetailControl.xaml
+++ b/ClientIT/Controls/TicketDetailControl.xaml
@@ -22,7 +22,9 @@
         </Style>
     </UserControl.Resources>
 
-    <Grid Padding="0,16,0,0">
+    <Grid Padding="0,16,0,0"
+          BorderThickness="0,4,0,0" 
+          BorderBrush="{x:Bind ViewModel.StatusBorderBrush, Mode=OneWay}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
