--- a/ClientIT/Controls/TicketDetailControl.xaml
+++ b/ClientIT/Controls/TicketDetailControl.xaml
@@ -122,7 +122,7 @@
 
                     <ComboBox x:Name="AssegnatoCombo" Grid.Row="1" Grid.Column="1" 
                               Header="Assegna a" HorizontalAlignment="Stretch"
-                              DisplayMemberPath="UsernameAd" SelectedValuePath="Id" 
+                              DisplayMemberPath="Nome" SelectedValuePath="Id" 
                               SelectionChanged="AssegnatoaComboBox_SelectionChanged"/>
                 </Grid>
 
