--- a/ClientIT/Controls/TicketItemControl.xaml
+++ b/ClientIT/Controls/TicketItemControl.xaml
@@ -154,7 +154,7 @@
                       Grid.Column="3"
                       Header="Assegna a"
                       HorizontalAlignment="Stretch"
-                      DisplayMemberPath="UsernameAd"
+                      DisplayMemberPath="Nome"
                       SelectedValuePath="Id"
                       SelectionChanged="AssegnatoaComboBox_SelectionChanged"/>
         </Grid>
